@@ -1,3 +1,9 @@
+2021-04-14  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
+
+	* dwarf2/read.c (inherit_abstract_dies): Keep a reference to the
+	corresponding child of the abstract DIE when iterating the
+	children of the concrete DIE.
+
 2021-01-01  Joel Brobecker  <brobecker@adacore.com>
 
 	* copyright.py (get_update_list): Add "gdbserver" and "gdbsupport"
